# Project-02-SmartRH

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
config/: firebase_config.py
controllers/: job_controller.py  resume_controller.py
models/: resume.py
services/: langchain_service.py
smart_rh/: app.py
smart_rh/config/: langchain_config.py
smart_rh/controllers/: job_controller.py  resume_controller.py
smart_rh/firebase/: FirebaseAPI.py  FirebaseConfig.py  __init__.py
smart_rh/models/: CurriculumAnalysisUseCase.py  FileUseCase.py  JobsUseCase.py  ResumeUseCase.py  job.py  resume.py
smart_rh/services/: analysis_extractor.py  firebase_service.py  langchain_service.py
smart_rh/utils/: FunUploadFile.py  FuncCadastroJob.py  FuncVisualizarVagas.py
smart_rh/views/: FunUploadFile.py  analysis_ia_page.py  config_page.py  show_job_form.py  show_job_upload_file.py  show_jobs_page.py
views/: analysis_ia_page.py  show_job_form.py  show_job_upload_file.py  show_jobs_page.py
