[project]
name = "smartrh"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Moreira"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "firebase-admin (>=6.7.0,<7.0.0)",
    "pydantic (>=2.11.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
